# bevy_gamepad

./: Cargo.toml  README.md
examples/: simple.rs  viewer.rs
src/: error.rs  game_controller.rs  lib.rs  platform.rs  profile.rs
src/platform/: apple.rs
src/platform/apple/: profiles.rs
