[package]
name = "bevy_gamepad"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
description = "Apple Game Controller Framework Integration plugin for Bevy"
repository = "https://github.com/boondocklabs/bevy_gamepad"
keywords = ["gamedev", "bevy", "joystick", "gamepad", "apple"]
categories = ["game-development", "game-engines", "hardware-support"]

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "android-game-activity",
    "android_shared_stdcxx",
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
    "multi_threaded",
    "png",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "vorbis",
    "webgl2",
    "x11",
] }
block2 = "0.6.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
objc2 = "0.6.0"
objc2-foundation = "0.3.0"
objc2-game-controller = "0.3.0"
